tests/neg-macros/macros-in-same-project-5/Bar.scala
import scala.quoted._

object Bar {

  Foo.myMacro() // error

  def aMacroImplementation(using s: Scope): s.Expr[Unit] = Bar.hello()

  def hello()(using s: Scope): s.Expr[Unit] = '{ println("Hello") }
}
